Do not use Stream.toList() for Java 11